# mcparr

./: .eslintrc.json  .gitignore  .gitlab-ci.yml  .template-config.json  .versionrc.json  CHANGELOG.md  GITHUB_RELEASES.md  INSTALLATION.md  Makefile  README.md  TEST-CI.md  clean-restart.sh  jest.config.js  manage.sh  package-lock.json  package.json
src/backend/: .coverage  .env.example  .flake8  alembic.ini  coverage.xml  pyproject.toml  requirements.txt
src/backend/alembic/: env.py
src/backend/alembic/versions/: 38ec2f63fe33_add_mcp_requests_table.py  3f53e68e6e2f_add_service_and_user_mapping_tables.py  66c704a2b53f_add_tool_calling_fields_to_training_.py  7007e2ea11ab_update_tool_chains_architecture.py  a1b2c3d4e5f6_add_group_tables.py  a1b2c3d4e5f7_add_training_logs_column.py  abc123def456_if_then_else_tool_chains.py  b330c410dcaa_add_log_entries_and_alert_tables.py  d4e5f6a7b8c9_add_training_backend_column.py  def456ghi789_nested_conditionals.py  e0a52889fb79_initial_migration.py  e5f6a7b8c9d0_add_session_prompt_association.py  ec1c3fa21321_add_external_url_to_services.py  f2ec3cb56436_add_alert_acknowledgment_fields.py  fc44cc5970f9_add_training_session_and_prompt_tables.py  ghi789jkl012_global_search_config.py
src/backend/scripts/: init_db.py  migrate_database.py
src/backend/src/: database.py  main.py  version.py
src/backend/src/adapters/: __init__.py  audiobookshelf.py  authentik.py  base.py  deluge.py  jackett.py  komga.py  ollama.py  openwebui.py  overseerr.py  plex.py  prowlarr.py  radarr.py  romm.py  sonarr.py  tautulli.py  wikijs.py  zammad.py
src/backend/src/config/: settings.py
src/backend/src/database/: __init__.py  connection.py
src/backend/src/mcp/: __init__.py  main.py  server.py
src/backend/src/middleware/: __init__.py  correlation_id.py  logging.py
src/backend/src/models/: __init__.py  alert_config.py  base.py  configuration.py  global_search.py  group.py  log_entry.py  mcp_request.py  service_config.py  service_group.py  system_metrics.py  tool_chain.py  (+4 more)
src/backend/tests/: __init__.py  conftest.py  test_health.py
(+257 files in other folders)
