[tool.poetry]
name = "mcparr-gateway"
version = "0.1.0"
description = "MCParr AI Gateway - MCP server with web administration interface"
authors = ["MCParr Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
httpx = "^0.25.2"
redis = "^5.0.1"
celery = "^5.3.4"
psutil = "^5.9.6"
loguru = "^0.7.2"
prometheus-client = "^0.19.0"
docker = "^7.0.0"
aiosqlite = "^0.19.0"
asyncpg = "^0.29.0"
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.1"
ipython = "^8.18.0"
httpx = "^0.25.2"
factory-boy = "^3.3.0"
faker = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
line-length = 120
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "B008",  # Do not perform function calls in argument defaults (FastAPI pattern with Depends)
    "E501",  # Line too long - many tool descriptions are intentionally long for AI context
    "E712",  # Comparison to True/False - required for SQLAlchemy column comparisons (Column.enabled == True)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
strict_equality = true